# CS-EXTC2-HUB

./: .gitignore  Adding Your Own Payloads.md  README.md  connectors.db  controllers.db  main.py  requirements.txt  todo.md
dev/icmp_x64/: CMakeLists.txt.j2  about.md  icmp_x64.c.j2
payloads/: __init__.py
payloads/icmp_x64/: CMakeLists.txt.j2  about.md  config.json  controller.py.j2
payloads/icmp_x86/: CMakeLists.txt  CMakeLists.txt.j2  about.md  config.json  controller.py.j2  icmp_x86.c  icmp_x86.c.j2  requirements.txt
src/hub/: compile.py  connectorhub.py  controllerhub.py  db.py  extc2.py  filebrowser.py  instances.py  protocolhub.py  webapp.py
src/hub/source/icmp_x86/: client_x86.c
